--- a/.github/workflows/publish-godel-artifacts.yml
+++ b/.github/workflows/publish-godel-artifacts.yml
@@ -57,4 +57,4 @@ jobs:
           key: ${{ runner.os }}-godel-${{ hashFiles('godelw', 'godel/config/godel.yml') }}
       - run: ./godelw mod
       - run: ./godelw dist
-      - run: ./godelw publish github --add-v-prefix --api-url=$GITHUB_API_URL --user=%s --repository=%s --token=${{ secrets.GITHUB_TOKEN }}
+      - run: ./godelw publish github --add-v-prefix --api-url=$GITHUB_API_URL --user=palantir --repository=godel-goland-plugin --token=${{ secrets.GITHUB_TOKEN }}
